# react-native-jetpack-compose

./: .gitignore  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml  react-native.config.cjs  react-native.config.js  tsconfig.node.json
android/: build.gradle  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mgcrea/reactnative/jetpackcompose/: ColorView.kt  ColorViewManager.kt  DatePickerView.kt  DatePickerViewManager.kt  DateRangePickerView.kt  DateRangePickerViewManager.kt  ModalBottomSheet.kt  ModalBottomSheetManager.kt  ModalBottomSheetViewDialog.kt  PickerView.kt  PickerViewManager.kt  RNJetpackComposePackage.kt  SelectView.kt  SelectViewManager.kt  SheetPickerView.kt  SheetPickerViewManager.kt  TextFieldView.kt  TextFieldViewManager.kt  TimePickerView.kt  TimePickerViewManager.kt  TimeRangePickerView.kt  TimeRangePickerViewManager.kt
android/src/main/java/com/mgcrea/reactnative/jetpackcompose/core/: DialogHostView.kt  InlineComposeView.kt
android/src/main/java/com/mgcrea/reactnative/jetpackcompose/events/: DatePickerEvents.kt  PickerEvents.kt  TextFieldEvents.kt  TimePickerEvents.kt
android/src/main/jni/: CMakeLists.txt  RNJetpackComposeSpec.cpp  RNJetpackComposeSpec.h  placeholder.cpp
docs/: astro.config.mjs  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/components/: date-picker.md  date-range-picker.md  index.md  modal-bottom-sheet.md  picker.md  sheet-picker.md  text-field.md  time-picker.md  time-range-picker.md
docs/src/content/docs/examples/: booking-form.md  contact-form.md  settings-screen.md
docs/src/content/docs/getting-started/: how-it-works.md  installation.md  introduction.md  quick-start.md
docs/src/content/docs/guides/: building-forms.md  date-time-handling.md  event-handling.md  styling.md
src/: index.ts
src/native/: ColorView.tsx  ColorViewNativeComponent.ts  DatePicker.test.tsx  DatePicker.tsx  DatePickerModal.tsx  DatePickerNativeComponent.ts  DateRangePicker.test.tsx  DateRangePicker.tsx  DateRangePickerModal.tsx  DateRangePickerNativeComponent.ts  ModalBottomSheet.test.tsx  ModalBottomSheet.tsx  ModalBottomSheetNativeComponent.ts  Picker.test.tsx  Picker.tsx  PickerNativeComponent.ts  Select.tsx  SelectNativeComponent.ts  SheetPicker.test.tsx  SheetPicker.tsx  SheetPickerNativeComponent.ts  TextField.test.tsx  TextField.tsx  TextFieldNativeComponent.ts  TimePicker.tsx  TimePickerNativeComponent.ts  TimeRangePicker.tsx  TimeRangePickerNativeComponent.ts
